--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
-    //implementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
-  // testImplementation 'net.lightbody.bmp:browsermob-dist:2.1.5'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
+    implementation 'io.github.cdimascio:dotenv-java:2.3.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
