--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     implementation 'io.github.cdimascio:dotenv-java:2.3.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
