--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.2'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 group 'org.jhey'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -20,6 +22,23 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
+publishing {
+    publications {
+        seleniumCaptchaBreaker(MavenPublication){
+                groupId = 'org.jhey'
+                artifactId = 'selenium-captcha-breaker'
+                version = '1.0.0'
+                from components.java
+        }
+    }
+    repositories{
+        maven{
+            name = 'selenium-captcha-breaker'
+            url 'file://' + project.buildDir.path + '/repo'
+
+        }
+    }
 }
 
 test {
